# Idris-dev

libs/: WORKSPACE
libs/base/: BUILD.bazel
libs/contrib/: BUILD.bazel
libs/effects/: BUILD.bazel
libs/prelude/: BUILD.bazel
libs/pruviloj/: BUILD.bazel
