load("@rules_idris//idris:rules_idris.bzl", "idris_library")

idris_library (
    name = "effects",
    deps = ["//prelude:prelude"],
    opts = "--nobasepkgs --partial-eval --typeintype",
    strip_prefix = "effects/",
    srcs = native.glob(["**/*.idr"]),
    visibility = ["//visibility:public"],
)
